--- a/cases/function/multiple_databases/test_multiple_databases.yaml
+++ b/cases/function/multiple_databases/test_multiple_databases.yaml
@@ -111,3 +111,295 @@ cases:
     sql: select db1.{0}.c1, db1.{0}.c2, {1}.c3, {1}.c4 from {0} last join db2.{1} ORDER BY db2.{1}.c3 on db1.{0}.c1=db2.{1}.c1;
     expect:
       success: false
+  - id: 5
+    desc: 全部使用默认库
+    db: db
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select {0}.c1,{0}.c2,{1}.c3,{1}.c4 from {0} last join {1} ORDER BY {1}.c3 on {0}.c1={1}.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  - id: 6
+    desc: 指定当前库查询
+    db: db
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db.{0}.c1,db.{0}.c2,db.{1}.c3,db.{1}.c4 from db.{0} last join db.{1} ORDER BY db.{1}.c3 on db.{0}.c1=db.{1}.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  - id: 6
+    desc: 指定当前库查询
+    db: db
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db.{0}.c1,db.{0}.c2,db.{1}.c3,db.{1}.c4 from db.{0} last join db.{1} ORDER BY db.{1}.c3 on db.{0}.c1=db.{1}.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  - id: 7
+    desc: 查询使用其他库
+    db: db
+    inputs:
+      -
+        columns : ["c1 string","c2 int","c3 bigint","c4 timestamp"]
+        db: db1
+        indexs: ["index1:c1:c4"]
+        rows:
+          - ["aa",2,3,1590738989000]
+          - ["bb",21,31,1590738990000]
+          - ["cc",41,51,1590738991000]
+    sql: select * from (select c1, c2+1,c3+1 from db1.{0}) as t1;
+    expect:
+      columns: ["c1 string", "c2 + 1 int", "c3 + 1 bigint"]
+      order: c1
+      rows:
+        - ["aa", 3,4]
+        - ["bb", 22,32]
+        - ["cc", 42,52]
+  - id: 8
+    desc: 子查询后的表使用默认库
+    db: db
+    inputs:
+      -
+        columns : ["c1 string","c2 int","c3 bigint","c4 timestamp"]
+        db: db1
+        indexs: ["index1:c1:c4"]
+        rows:
+          - ["aa",2,3,1590738989000]
+          - ["bb",21,31,1590738990000]
+          - ["cc",41,51,1590738991000]
+    sql: select db.t1.c1 from (select c1, c2+1,c3+1 from db1.{0}) as t1;
+    expect:
+      columns: ["c1 string"]
+      order: c1
+      rows:
+        - ["aa"]
+        - ["bb"]
+        - ["cc"]
+  - id: 9
+    desc: 子查询后的表使用其他库
+    db: db
+    inputs:
+      -
+        columns : ["c1 string","c2 int","c3 bigint","c4 timestamp"]
+        db: db1
+        indexs: ["index1:c1:c4"]
+        rows:
+          - ["aa",2,3,1590738989000]
+          - ["bb",21,31,1590738990000]
+          - ["cc",41,51,1590738991000]
+    sql: select db1.t1.c1 from (select c1, c2+1,c3+1 from db1.{0}) as t1;
+    expect:
+      success: false
+  - id: 10
+    desc: 使用子查询查不同库的数据然后lastjoin
+    db: db
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db1
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db2
+        indexs: [ "index1:c1:c3" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db.t1.c1,db.t1.c2,db.t2.c3,db.t2.c4 from (select * from db1.{0}) as t1 last join (select * from db2.{1}) as t2 ORDER BY db.t2.c3 on db.t1.c1=db.t2.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  - id: 11
+    desc: 三表三个库拼表
+    db: db
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db1
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db2
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "bb",41,121,1590738992000 ]
+          - [ "bb",41,121,1590738991000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db3
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "aa",21,131,1590738992000 ]
+          - [ "aa",41,121,1590738991000 ]
+          - [ "bb",41,121,1590738991000 ]
+    sql: select db1.{0}.c1,db1.{0}.c2,db2.{1}.c4,db3.{2}.c4 from db1.{0} last join db2.{1} ORDER BY db2.{1}.c4 on db1.{0}.c1=db2.{1}.c1 last join db3.{2} order by db3.{2}.c4 on db1.{0}.c1=db3.{2}.c1;
+    expect:
+      columns: [ "c1 string","c2 int","c4 timestamp","c4 timestamp" ]
+      order: c1
+      rows:
+        - [ "aa",2,1590738989000,1590738992000 ]
+        - [ "bb",21,1590738992000,1590738991000 ]
+  - id: 12
+    desc: 不等值拼接
+    db: db
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db1
+        indexs: [ "index1:c2:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        db: db2
+        indexs: [ "index1:c2:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "bb",21,32,1590738993000 ]
+          - [ "bb",21,31,1590738992000 ]
+          - [ "bb",21,31,1590738991000 ]
+    sql: select db1.{0}.c1,db1.{0}.c2,db2.{1}.c3,db2.{1}.c4 from db1.{0} last join db2.{1} ORDER BY db2.{1}.c4 on db1.{0}.c2 = db2.{1}.c2 and db1.{0}.c3 <= db2.{1}.c3;
+    expect:
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      order: c1
+      rows:
+        - [ "aa",2,3,1590738989000 ]
+        - [ "bb",21,32,1590738993000 ]
+  - id: 13
+    desc: 不同库相同表lastjoin
+    db: db
+    inputs:
+      - db: db1
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        name: t1
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - db: db2
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        name: t1
+        indexs: [ "index1:c1:c3" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db1.t1.c1,db1.t1.c2,db2.t1.c3,db2.t1.c4 from db1.t1 last join db2.t1 ORDER BY db2.t1.c3 on db1.t1.c1=db2.t1.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  -
+    id: 14
+    desc: window rows使用其他库
+    db: db
+    inputs:
+      -
+        columns: ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        db: db1
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM db1.{0} WINDOW w1 AS (PARTITION BY db1.{0}.c1 ORDER BY db1.{0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+    expect:
+      order: c3
+      columns: ["c1 string","c3 int","w1_c4_sum bigint"]
+      rows:
+        - ["aa",20,30]
+        - ["aa",21,61]
+        - ["aa",22,93]
+        - ["aa",23,96]
+        - ["bb",24,34]
+  - id: 15
+    desc: window ROWS_RANGE 使用其他库
+    db: db
+    inputs:
+      - columns: [ "c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
+        db: db1
+        indexs: [ "index1:c1:c7" ]
+        rows:
+          - [ "aa",20,30,1.1,2.1,1590738990000,"2020-05-01" ]
+          - [ "aa",21,31,1.2,2.2,1590738991000,"2020-05-02" ]
+          - [ "aa",22,32,1.3,2.3,1590738992000,"2020-05-03" ]
+          - [ "aa",23,33,1.4,2.4,1590738993000,"2020-05-04" ]
+          - [ "bb",24,34,1.5,2.5,1590738994000,"2020-05-05" ]
+    sql: |
+      SELECT c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM db1.{0} WINDOW w1 AS (PARTITION BY db1.{0}.c1 ORDER BY db1.{0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
+    expect:
+      order: c3
+      columns: [ "c1 string","c3 int","w1_c4_sum bigint" ]
+      rows:
+        - [ "aa",20,30 ]
+        - [ "aa",21,61 ]
+        - [ "aa",22,93 ]
+        - [ "aa",23,96 ]
+        - [ "bb",24,34 ]
+
+
