--- a/cases/function/test_performance_insensitive/test_performance_insensitive.yaml
+++ b/cases/function/test_performance_insensitive/test_performance_insensitive.yaml
@@ -13,26 +13,131 @@
 # limitations under the License.
 
 db: test_zw
-debugs: []
+debugs: ["where两个条件都命中索引"]
 cases:
-  - id: 4-2
-    desc: Last Join 无order by, 拼表条件没有命中索引-rtidb环境不支持
-    mode: offline-unsupport
+  - id: 0
+    desc: where不命中素索引=
     inputs:
       - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
         indexs: [ "index1:c1:c4" ]
         rows:
           - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
           - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c2=20;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "aa", 20, 30, 1590738991000 ]
+  - id: 0
+    desc: where不命中素索引==
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c2==20;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "aa", 20, 30, 1590738991000 ]
+  - id: 0
+    desc: where不命中索引不等值查询
+  - id: 0
+    desc: where不命中素索引=
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c2>20;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "bb", 21, 31, 1590738990000 ]
+        - [ "dd", 41, 51, 1590738990000 ]
+  - id: 0
+    desc: where两个条件第一个命中索引
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c1='aa' and c2>2;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "aa", 20, 30, 1590738991000 ]
+  - id: 0
+    desc: where命中索引
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c1='bb';
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "bb", 21, 31, 1590738990000 ]
+  - id: 0
+    desc: where两个条件第二个命中索引
+    inputs:
       - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
         indexs: [ "index1:c2:c4" ]
         rows:
-          - [ "aa",2,13,1590738989000 ]
-          - [ "bb",21,131,1590738990000 ]
-          - [ "cc",41,121,1590738991000 ]
-    sql: select {0}.c1,{0}.c2,{1}.c3,{1}.c4 from {0} last join {1} on {0}.c1={1}.c1;
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c1='aa' and c2>2;
     expect:
-      success: false
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "aa", 20, 30, 1590738991000 ]
+  - id: 0
+    desc: where两个条件都命中索引
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4","index1:c2:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c1='aa' and c2>2;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "aa", 20, 30, 1590738991000 ]
+  - id: 0
+    desc: where两个条件都不命中索引
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c3:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "aa",20,30,1590738991000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "dd",41,51,1590738990000 ]
+    sql: select * from {0} where c1='aa' and c2>2;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      rows:
+        - [ "aa", 20, 30, 1590738991000 ]
   - id: 4-3
     desc: Last Join 无order by, 拼表条件命中部分的组合索引(前缀索引)
     mode: offline-unsupport
@@ -78,8 +183,7 @@ cases:
     expect:
       success: false
   - id: 4-6
-    desc: Last Join 无order by, 拼表条件没有命中索引-离线支持
-    mode: rtidb-unsupport
+    desc: Last Join 无order by, 拼表条件没有命中索引
     inputs:
       - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
         indexs: [ "index1:c1:c4" ]
@@ -175,8 +279,7 @@ cases:
       success: false
   -
     id: 2
-    desc: float为partition by - 未命中索引
-    mode: rtidb-unsupport
+    desc: rows-float为partition by-未命中索引
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -200,8 +303,7 @@ cases:
         - [5,"ee",1.2,34]
   -
     id: 3
-    desc: double为partition by - 未命中索引
-    mode: rtidb-unsupport
+    desc: rows-double为partition by-未命中索引
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -224,8 +326,7 @@ cases:
         - [4,"dd",2.1,96]
         - [5,"ee",2.2,34]
   - id: 2
-    desc: float为partition by - 未命中索引
-    mode: rtidb-unsupport
+    desc: rows_range-float为partition by-未命中索引
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c1:c7" ]
@@ -247,8 +348,7 @@ cases:
         - [ 4,"dd",1.1,96 ]
         - [ 5,"ee",1.2,34 ]
   - id: 3
-    desc: double为partition by - 未命中索引
-    mode: rtidb-unsupport
+    desc: rows_range-double为partition by-未命中索引
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c1:c7" ]
@@ -269,48 +369,8 @@ cases:
         - [ 3,"cc",2.1,93 ]
         - [ 4,"dd",2.1,96 ]
         - [ 5,"ee",2.2,34 ]
-  - id: 8-4
-    desc: int为order by-加单位-未命中索引
-    mode: rtidb-unsupport
-    inputs:
-      - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
-        indexs: [ "index1:c1:c7" ]
-        rows:
-          - [ 1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01" ]
-          - [ 2,"bb",21,31,1.1,2.1,1590738990000,"2020-05-01" ]
-          - [ 3,"cc",22,32,1.1,2.1,1590738990000,"2020-05-01" ]
-          - [ 4,"dd",23,33,1.1,2.1,1590738990000,"2020-05-01" ]
-          - [ 5,"ee",24,34,1.2,2.2,1590738991000,"2020-05-02" ]
-    sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c8 ORDER BY {0}.c3 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      order: id
-      columns: [ "id int","c1 string","c4 bigint","w1_c4_count bigint" ]
-      rows:
-        - [ 1,"aa",30,1 ]
-        - [ 2,"bb",31,2 ]
-        - [ 3,"cc",32,3 ]
-        - [ 4,"dd",33,4 ]
-        - [ 5,"ee",34,1 ]
-  - id: 11
-    desc: date为order by-未命中索引
-    mode: offline-unsupport
-    inputs:
-      - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
-        indexs: [ "index1:c1:c7" ]
-        rows:
-          - [ 1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01" ]
-          - [ 2,"bb",20,31,1.2,2.2,1590738990000,"2020-05-02" ]
-          - [ 3,"cc",20,32,1.3,2.3,1590738990000,"2020-05-03" ]
-          - [ 4,"dd",20,33,1.4,2.4,1590738990000,"2020-05-04" ]
-          - [ 5,"ee",21,34,1.5,2.5,1590738991000,"2020-05-05" ]
-    sql: |
-      SELECT id, c1, c8, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c8 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
   - id: 5
     desc: 样本表使用索引,UNION表未命中索引
-    mode: rtidb-unsupport
     inputs:
       - columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
         indexs: ["index1:c3:c7"]
@@ -320,30 +380,6 @@ cases:
           - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
       - columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
         indexs: ["index1:c1:c7"]
-        rows:
-          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
-    sql: |
-      SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (UNION {1} PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
-    expect:
-      order: id
-      columns: ["id int","c1 string","c3 int","w1_c4_sum bigint"]
-      rows:
-        - [1,"aa",20,30]
-        - [4,"dd",20,96]
-        - [5,"ee",21,34]
-  - id: 6
-    desc: union表使用索引,样本表未命中索引
-    mode: rtidb-unsupport
-    inputs:
-      - columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
-      - columns: ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c3:c7"]
         rows:
           - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
           - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
