build(cmake): update third-party module

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@
 *.app
 # idea
 *.class
-java/target
 *.idea
 *.iml
 *.DS_store
@@ -65,13 +64,20 @@ src/version.h
 src/config.h
 java/openmldb-native/src/main/resources
 java/openmldb-native/src/main/java
-java/openmldb-native/target/
-java/openmldb-jdbc/target/
 java/openmldb-import/src/main/java/com/_4paradigm/openmldb/proto/
 java/openmldb-nearline-tablet/src/main/java/com/_4paradigm/openmldb/proto/
 java/openmldb-taskmanager/src/main/java/com/_4paradigm/openmldb/proto/
 python/logs
 python/sqlalchemy-test/*.xml
+
+**/target/
+**/.settings/
+**/.classpath
+**/.project
+**/.factorypath
+**/.cache/
+**/.metals/
+
 
 .vscode/settings.json
 
@@ -79,6 +85,11 @@ python/sqlalchemy-test/*.xml
 /openmldb-*
 
 /cmake-*
+
+**/.deps/
+
+**/compile_commands.json
+**/pom.xml.versionsBackup
 
 # test
 logs
