chore: update comments

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,8 +29,8 @@ jobs:
         run: |
           make build SQL_PYSDK_ENABLE=OFF SQL_JAVASDK_ENABLE=OFF TESTING_ENABLE=ON
           # GitHub runner disk space is limited
-          # delete thirdparty build directory to save disk space
-          make thirdparty-build-clean
+          # delete thirdparty build directory($ROOT/.deps/) to save disk space
+          make thirdpartybuild-clean
 
       - name: pack OpenMLDB
         if: ${{ github.event_name == 'push' }}
