--- a/cases/function/join/test_lastjoin_simple.yaml
+++ b/cases/function/join/test_lastjoin_simple.yaml
@@ -106,8 +106,8 @@ cases:
         - [ "bb",21,131,1590738990000 ]
         - [ "dd", 41, NULL, NULL ]
   - id: 4-2
-    desc: Last Join 无order by, 拼表条件没有命中索引-rtidb环境不支持
-    mode: offline-unsupport
+    desc: Last Join 无order by, 拼表条件没有命中索引-performance-sensitive环境下编译失败
+    mode: non-performance-sensitive-unsupport, offline-unsupport
     inputs:
       - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
         indexs: [ "index1:c1:c4" ]
@@ -151,8 +151,8 @@ cases:
         - [ "bb",21,131,1590738990000 ]
         - [ "dd", 41, NULL, NULL ]
   - id: 4-3
-    desc: Last Join 无order by, 拼表条件命中部分的组合索引(前缀索引)
-    mode: offline-unsupport
+    desc: Last Join 无order by, 拼表条件命中部分的组合索引(前缀索引), performance-sensitive下失败
+    mode: non-performance-sensitive-unsupport, offline-unsupport
     inputs:
       - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
         indexs: [ "index1:c1:c4" ]
@@ -174,7 +174,7 @@ cases:
       success: false
   - id: 4-4
     desc: Last Join 无order by, 拼表条件命中部分的组合索引(后缀索引)
-    mode: offline-unsupport
+    mode: non-performance-sensitive-unsupport, offline-unsupport
     inputs:
       - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
         indexs: [ "index1:c1:c4" ]
@@ -451,7 +451,8 @@ cases:
         - [ "bb",21,31,1590738992000 ]
   - id: 13
     desc: 拼接条件-float-未命中索引
-    mode: rtidb-unsupport
+    mode: rtidb-unsupport, performance-sensitive-unsupport
+    tags: ["TODO", "v0.3.0", "@chenjing, fix join on double/float equal condition"]
     inputs:
       - columns: [ "c1 string","c2 float","c3 double","c4 timestamp","c5 date","c6 string" ]
         indexs: [ "index1:c1:c4" ]
@@ -474,7 +475,8 @@ cases:
         - [ "bb",2.2,3.2,1590738992000 ]
   - id: 13-2
     desc: 拼接条件-double
-    mode: rtidb-unsupport
+    mode: rtidb-unsupport, performance-sensitive-unsupport
+    tags: ["TODO", "v0.3.0", "@chenjing, fix join on double/float equal condition"]
     inputs:
       - columns: [ "c1 string","c2 float","c3 double","c4 timestamp","c5 date","c6 string" ]
         indexs: [ "index1:c1:c4" ]
@@ -992,3 +994,25 @@ cases:
       rows:
         - ["aa",true,3,1590738989000]
         - ["bb",false,31,1590738992000]
+  - id: 4-6
+    desc: lastjoin-拼表条件没有命中索引
+    mode: performance-sensitive-unsupport
+    inputs:
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+      - columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c2:c4" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,121,1590738991000 ]
+    sql: select {0}.c1,{0}.c2,{1}.c3,{1}.c4 from {0} last join {1} order by {1}.c4 on {0}.c1={1}.c1;
+    expect:
+      columns: [ "c1 string", "c2 int", "c3 bigint", "c4 timestamp" ]
+      order: c1
+      rows:
+        - [ "aa", 2, 13, 1590738989000 ]
+        - [ "bb", 21, 131, 1590738990000 ]
