--- a/cases/function/dml/multi_insert.yaml
+++ b/cases/function/dml/multi_insert.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 db: multi_insert_db
+debugs: ["简单INSERT NULL value"]
 cases:
   - id: 0
     desc: 简单INSERT
@@ -71,8 +72,7 @@ cases:
   - id: 2
     desc: 简单INSERT timestamp
     inputs:
-      - name: t1
-        create: |
+      - create: |
           create table {0} (
           col1 int not null,
           col5 bigint not null,
@@ -120,8 +120,7 @@ cases:
   - id: 4
     desc: Insert date
     inputs:
-      - name: t1
-        create: |
+      - create: |
           create table {0} (
           col1 int not null,
           col2 smallint,
@@ -161,7 +160,7 @@ cases:
           );
         insert: |
           insert into {0} values ("hello", 1, NULL, 3.3f, 4.4, 5L, "world"),
-          ("hi", 2, NULL, 33.3f, 44.4, 55L, "db")
+          ("hi", 2, NULL, 33.3f, 44.4, 55L, "db");
     sql: select * from {0};
     expect:
       columns: [ "col0 string", "col1 int", "col2 int16", "col3 float", "col4 double", "col5 bigint", "col6 string" ]
@@ -169,3 +168,119 @@ cases:
       rows:
         - [hello, 1, NULL, 3.3, 4.4, 5, world]
         - [hi, 2, NULL, 33.3, 44.4, 55, db]
+  -
+    id: 6
+    desc: 所有列插入多条
+    inputs:
+      -
+        create: |
+          create table {0} (
+          id int not null,
+          c1 int not null,
+          c2 smallint not null,
+          c3 float not null,
+          c4 double not null,
+          c5 bigint not null,
+          c6 string not null,
+          c7 timestamp not null,
+          c8 date not null,
+          c9 bool not null,
+          index(key=(c1), ts=c5)
+          );
+        insert: |
+          insert into {0} values
+            (1, 1, 2, 3.3f, 4.4, 5L, "aa", 12345678L, "2020-05-21", true),
+            (2, 10, 20, 3.31f, 4.41, 50L, "bb", 12345679L, "2020-05-22", false);
+    sql: select * from {0};
+    expect:
+      columns : ["id int","c1 int","c2 smallint","c3 float","c4 double","c5 bigint","c6 string","c7 timestamp","c8 date","c9 bool"]
+      order: id
+      rows:
+        - [1,1,2,3.3,4.4,5,"aa",12345678,"2020-05-21",true]
+        - [2,10,20,3.31,4.41,50,"bb",12345679,"2020-05-22",false]
+  -
+    id: 7
+    desc: 其中一条数据类型不兼容
+    inputs:
+      -
+        create: |
+          create table {0} (
+          id int,
+          c1 int,
+          c2 smallint,
+          c3 float,
+          c5 bigint,
+          index(key=(c1), ts=c5)
+          );
+    sql: |
+      insert into {0} (id,c3,c5)values
+                  (1, 3.3,12345678),
+                  (2, "aa",12345679);
+    expect:
+      success: false
+  -
+    id: 8
+    desc: 插入多条空串
+    mode: cli-unsupport
+    inputs:
+      -
+        create: |
+          create table {0} (
+          id int,
+          c1 int,
+          c2 string,
+          c3 float,
+          c5 bigint,
+          index(key=(c1), ts=c5)
+          );
+        insert: |
+          insert into {0} (id,c2,c3,c5)values
+            (1, "",null,12345678),
+            (2, "",null,12345679);
+    sql: select * from {0};
+    expect:
+      columns : ["id int","c1 int","c2 string","c3 float","c5 bigint"]
+      order: id
+      rows:
+        - [1,null,"",null,12345678]
+        - [2,null,"",null,12345679]
+  -
+    id: 9
+    desc: 插入数据和列的数量不匹配
+    inputs:
+      -
+        create: |
+          create table {0} (
+          id int,
+          c1 int,
+          c2 smallint,
+          c3 float,
+          c5 bigint,
+          index(key=(c1), ts=c5)
+          );
+    sql: |
+      insert into {0} (id,c3,c5)values
+                  (1,12345678),
+                  (2,12345679);
+    expect:
+      success: false
+  -
+    id: 10
+    desc: 其中一条数据少一列
+    inputs:
+      -
+        create: |
+          create table {0} (
+          id int,
+          c1 int,
+          c2 smallint,
+          c3 float,
+          c5 bigint,
+          index(key=(c1), ts=c5)
+          );
+    sql: |
+      insert into {0} (id,c3,c5)values
+                  (1, 3.3,12345678),
+                  (2,12345679);
+    expect:
+      success: false
