--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,9 +23,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build
-        # -e can't catch the error when the command is a port of list-constructs, so we should add `|| exit`
+        # -e can't catch the error when the command is a part of list-constructs, so we should add `|| exit`
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
+          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
+            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+            VERSION=$(echo $VERSION | sed -e 's/^v//')
+            bash steps/prepare_release.sh $VERSION
+          fi
           mkdir -p build
           source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) && cd ../ || exit
           rm -rf thirdparty
@@ -142,6 +147,11 @@ jobs:
       - name: build pysdk and sqlalchemy
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
+          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
+            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+            VERSION=$(echo $VERSION | sed -e 's/^v//')
+            bash steps/prepare_release.sh $VERSION
+          fi
           mkdir -p build
           source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=ON -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=OFF .. && make -j$(nproc) sqlalchemy_openmldb openmldb && cd ../ || exit
       - name: test sqlalchemy
