modify deploy code

--- a/test/integration-test/openmldb-test-java/openmldb-test-common/src/main/resources/fedb_deploy.properties
+++ b/test/integration-test/openmldb-test-java/openmldb-test-common/src/main/resources/fedb_deploy.properties
@@ -7,6 +7,6 @@ main=https://github.com/4paradigm/OpenMLDB/releases/download/v0.2.3/openmldb-0.2
 0.2.2=https://github.com/4paradigm/OpenMLDB/releases/download/0.2.2/openmldb-0.2.2-linux.tar.gz
 0.2.3=https://github.com/4paradigm/OpenMLDB/releases/download/v0.2.3/openmldb-0.2.3-linux.tar.gz
 
-tmp=http://pkg.4paradigm.com:81/rtidb/test/openmldb-snapshot-linux.tar.gz
-standalone=http://pkg.4paradigm.com:81/rtidb/test/openmldb-snapshot-linux.tar.gz
+tmp=http://pkg.4paradigm.com:81/rtidb/test/openmldb-0.3.0-linux.tar.gz
+standalone=http://pkg.4paradigm.com:81/rtidb/test/openmldb-0.3.0-linux.tar.gz
 
