--- a/test/integration-test/openmldb-test-java/openmldb-sdk-test/pom.xml
+++ b/test/integration-test/openmldb-test-java/openmldb-sdk-test/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <openmldb.version>0.2.4-macos-SNAPSHOT</openmldb.version>
+        <openmldb.version>0.3.0-macos</openmldb.version>
         <suiteXmlFile>test_suite/test_all.xml</suiteXmlFile>
         <aspectj.version>1.8.9</aspectj.version>
     </properties>
