--- a/test/integration-test/openmldb-test-java/openmldb-test-common/src/main/resources/fedb_deploy.properties
+++ b/test/integration-test/openmldb-test-java/openmldb-test-common/src/main/resources/fedb_deploy.properties
@@ -1,6 +1,7 @@
 
 #zk的url
 zk_url=https://archive.apache.org/dist/zookeeper/zookeeper-3.4.14/zookeeper-3.4.14.tar.gz
+
 #配置fedb版本以及对应的url
 
 main=https://github.com/4paradigm/OpenMLDB/releases/download/v0.2.3/openmldb-0.2.3-linux.tar.gz
@@ -9,4 +10,4 @@ main=https://github.com/4paradigm/OpenMLDB/releases/download/v0.2.3/openmldb-0.2
 
 tmp=http://pkg.4paradigm.com:81/rtidb/test/openmldb-0.3.0-linux.tar.gz
 standalone=http://pkg.4paradigm.com:81/rtidb/test/openmldb-0.3.0-linux.tar.gz
-
+tmp_zk_url=http://pkg.4paradigm.com:81/rtidb/test/zookeeper-3.4.14.tar.gz
